# amazon-automation

./: .env.example  .gitignore  .opencodeignore  2026.4.10测试错误汇总.md  2026.4.13测试错误汇总.md  CLAUDE.md  Makefile  OPENCODE_COMMANDS.md  PROJECT_DOCUMENTATION.md  PUDIWIND_V2_complete_report.docx  README.md  alembic.ini  amazon-code.tar  amazon_ai_dev.db  append_sys.py  build.gradle  chat_history_test.db  check_alembic.py  check_creds.py  check_env.sh  check_report.py  check_routes.sh  check_tables.py  cleanup_stuck.sh  create_phase4_tables.py  debug_checkpointer.py  deploy-bundle.tar  deploy_ads_fix.sh  deploy_fixes.sh  deploy_phase3b.sh  deploy_spapi.sh  download_report.py  explore_ss_endpoints.py  fetch_ss_swagger.py  final_verify.sh  find_routes.py  get_token.py  init_local_db.py  local-ads-manage.md  local-campaign-detail-page.md  (+62 more)
.deploy-staging/: alembic.ini  requirements.txt
.opencode/: oh-my-openagent.json
.playwright-mcp/: page-2026-04-02T13-21-31-284Z.yml
.sisyphus/: boulder.json
alembic/: env.py
docs/: credentials-setup.md  deployment-guide.md  phase1-deployment.md  server-setup.md  sp-api-guide.md
frontend/: Dockerfile  middleware.ts  next.config.mjs  package-lock.json
scripts/: import_documents.py  init-demo.sh  migrate_add_result_json.sql  preprocess_docs.py  setup-server.sh  test_feishu.py
src/: __init__.py  config.py
temp_frontend_ref/: README.md  metadata.json
tests/: conftest.py  eval_rag.py  golden_qa.json  test_ad_algorithm.py  test_ad_monitor_agent.py  test_ad_simulation.py  test_amazon_sp_api.py  test_approval.py  test_audit.py  (+30 more)
(+655 files in other folders)
